# pyui

./: AGENT_CONTEXT.md  CHANGELOG.md  README.md  app.py  pyproject.toml  pyui.md
.kiro/steering/: zolt.md
src/pyui/: __init__.py  app.py  page.py
src/pyui/cli/: main.py  storybook.py
src/pyui/compiler/: __init__.py  discovery.py  ir.py
src/pyui/components/: __init__.py  base.py
src/pyui/components/data/: __init__.py  chart.py  stat.py  table.py
src/pyui/components/display/: __init__.py  avatar.py  badge.py  heading.py  icon.py  image.py  markdown.py  tag.py  text.py
src/pyui/components/feedback/: __init__.py  alert.py  drawer.py  modal.py  progress.py  skeleton.py  spinner.py  toast.py  tooltip.py
src/pyui/components/input/: __init__.py  button.py  checkbox.py  datepicker.py  filepicker.py  form.py  input.py  radio.py  select.py  slider.py  textarea.py  toggle.py
src/pyui/components/layout/: __init__.py  container.py  divider.py  flex.py  grid.py  sidebar.py  spacer.py  split.py  stack.py
src/pyui/components/media/: __init__.py  video.py
src/pyui/components/navigation/: __init__.py  breadcrumb.py  menu.py  nav.py  pagination.py  tabs.py
src/pyui/renderers/cli/: __init__.py  generator.py
src/pyui/renderers/desktop/: __init__.py  tkinter_renderer.py
src/pyui/renderers/web/: generator.py  tailwind.py
src/pyui/server/: dev_server.py
src/pyui/state/: __init__.py  computed.py  reactive.py  store.py
src/pyui/theme/: __init__.py  tokens.py
src/pyui/utils/: logging.py
tests/: conftest.py  landing.py  portfolio.py  test_setup.py
tests/integration/: test_full_pipeline.py
tests/test_compiler/: test_discovery.py  test_ir.py
tests/test_renderers/: test_cli.py  test_desktop.py  test_web.py
